Getting Off The Ground
Player movement and basic zombie AI.

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,11 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]in/
+[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
@@ -33,6 +32,8 @@
 ExportedObj/
 .consulo/
 *.csproj
+*.vscode
+*.vsconfig
 *.unityproj
 *.sln
 *.suo
